--- a/FE/package.json
+++ b/FE/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.7.7",
     "lucide-react": "^0.429.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
