--- a/FE/package.json
+++ b/FE/package.json
@@ -10,16 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fast-csv/format": "^5.0.2",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@tinymce/tinymce-react": "^5.1.1",
     "axios": "^1.7.7",
+    "csv-parser": "^3.0.0",
+    "fast-csv": "^5.0.2",
     "lucide-react": "^0.429.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.26.1",
     "styled-components": "^6.1.12",
     "swiper": "^11.1.10"
